file(GLOB_RECURSE CvPrj_SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
include_directories( ${PROJECT_SOURCE_DIR}/include )

add_executable(${CvPrj_NAME} ${CvPrj_SRC_FILES})

target_link_libraries( ${CvPrj_NAME} ${OpenCV_LIBS}  )

INSTALL( TARGETS ${CvPrj_NAME} DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )


add_custom_target(run
    COMMAND ${CvPrj_NAME}
    DEPENDS ${CvPrj_NAME}
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
)

